runtime/pavex_macros/tests/error_handler/fail/multiple_inputs_no_attribute.rs
use pavex_macros::error_handler;

#[error_handler]
pub fn handler(_a: &str, _b: u64) -> pavex::Response {
    todo!()
}

fn main() {}
